Update for Patch v3.7.4 - checksum: fc72

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -759,50 +759,50 @@
  archaeostudies_desc:0 "The past holds technological secrets that yearn to be unveiled."
  tech_archaeostudies:0 "การศึกษาโบราณคดี"
  tech_archaeostudies_desc:0 "This new field of studies focuses on the practical applications of ancient artifacts. We are far from being the first galactic civilization to tread these stars. With a bit of work, their legacies could secure our future."
- tech_secrets_cybrex:0 "Cybrex Mining Hub"
+ tech_secrets_cybrex:0 "ศูนย์กลางการขุดเหมือง (Cybrex)"
  tech_secrets_cybrex_desc:0 "To build their ring world, the Cybrex relied on highly efficient mining drones to survey and harvest orbital resources. Cybrex-made memory chips and sensors could outfit our own mining drones, so that we might put their millennia old algorithms to good use."
- tech_secrets_league:0 "First League Filing Offices"
+ tech_secrets_league:0 "สำนักงานจัดเก็บเอกสาร (First League)"
  tech_secrets_league_desc:0 "The sprawling empire of the First League dwarfed our own at its peak, and relied on implacable bureaucracy to keep the wheels of the state in motion. The quantic filing arrays they used afforded them unprecedented efficiency in the sorting and storing of documents."
- tech_secrets_irassian:0 "Irassian Naval Yards"
+ tech_secrets_irassian:0 "อู่ต่อยาน (Irassian)"
  tech_secrets_irassian_desc:0 "The Irassian astronaval tradition was unmatched in their time. Their shipyards produced a constant stream of ships for their navy and merchant fleets, which would ultimately be their downfall. With so many ships, and such a high reliance on them, the Irassians were powerless to quarantine the disease that would claim their empire."
- tech_secrets_vultaum:0 "Vultaum Reality Computer"
+ tech_secrets_vultaum:0 "คอมพิวเตอร์แห่งความเป็นจริง (Vultaum)"
  tech_secrets_vultaum_desc:0 "The reality computers of the Vultaums were unique processing units, dedicated to analyzing existence itself, not quite through physics, but rather by trying to reverse engineer reality's source code and find the glitch that would finally allow the Vultaums to take down the simulation where they believed they lived."
- tech_secrets_yuht:0 "Yuht Astronomical Interferometer"
+ tech_secrets_yuht:0 "เครื่องมือตรวจจับคลื่นในอวกาศ (Yuht)"
  tech_secrets_yuht_desc:0 "The Yuht were a paradoxical society, obsessed with the idea of finding other sentient species, yet refusing to accept that they were not alone. They were so focused on disproving any claim of alien life, that their bias found a way into their technology. However, with the proper modifications and calibrations, we could certainly fix their powerful detection arrays."
- tech_secrets_baol:0 "Baol Organic Plant"
+ tech_secrets_baol:0 "พืชมีชีวิต (Baol)"
  tech_secrets_baol_desc:0 "The Baol Organism had a unique way of producing tools. Given the species' relative slowness, they would simply grow them out of organic matter in locations that were half orchard, half factory. With the proper genetic adjustments, we could also grow various commodities and tools alongside our regular crops."
- tech_secrets_zroni:0 "Zroni Storm Caster"
+ tech_secrets_zroni:0 "สตอร์มแคสเตอร์ (Zroni)"
  tech_secrets_zroni_desc:0 "Zro is a fascinating element, prone to chaotic bursts of energy. We believe that with the right artifacts, we could use it to fuel spatial storms over entire solar systems."
- tech_archaeoshield:0 "Ancient Suspension Field"
+ tech_archaeoshield:0 "สนามพลังหยุดความเสียหายชั่วคราวโบราณ"
  tech_archaeoshield_desc:0 "Projected farther than regular shields, the suspension field technology uses ancient artifacts to slow time at the point of impact to afford the shields a longer opportunity to dispel the incoming attack's energy."
- tech_archaeoarmor:0 "Ancient Pulse Armor"
+ tech_archaeoarmor:0 "เกราะพัลส์โบราณ"
  tech_archaeoarmor_desc:0 "Ionized plates of armor can carry a reactive charge to alleviate the energy of impacts, using magnetic repulsion and field projection principles."
- tech_archaeo_detection_scrambler:0 "Ancient Target Scrambler"
+ tech_archaeo_detection_scrambler:0 "เครื่องส่งสัญญาณรบกวนเป้าหมายโบราณ"
  tech_archaeo_detection_scrambler_desc:0 "Ping repetitors and optic diffusers with the right wavelengths can produce destructive interference and effectively scramble hostile targeting systems."
- tech_archaeo_rampart:0 "Ancient Rampart"
+ tech_archaeo_rampart:0 "ป้อมป้องกันโบราณ"
  tech_archaeo_rampart_desc:0 "Defense platforms are a cost effective way to ensure our safety, but they need to be monitored from an operation center. Fortifying our Starbase to ensure its survivability in the event of an attack, and maximizing our capacity to network independent orbital defenses would give us more time to dispatch reinforcements."
- tech_archaeo_titan_beam:0 "Ancient Ruination Glare"
+ tech_archaeo_titan_beam:0 "ลำแสงหายนะโบราณ"
  tech_archaeo_titan_beam_desc:0 "Tremendous medium range firepower will enable our titans to break through enemy lines. These ancient cannons were once the foundation upon which a galactic empire was built."
- tech_archaeo_overcharger:0 "Ancient Shield Overcharger"
+ tech_archaeo_overcharger:0 "โล่พลังงานโอเวอร์ชาร์จโบราณ"
  tech_archaeo_overcharger_desc:0 "Supercharging shields can be done safely thanks to ancient stabilizer coils and dampeners. In addition to the production of a stronger force field, this also has the added benefit of outright vaporizing certain incoming projectiles."
- tech_archaeo_refinery:0 "Ancient Refinery"
+ tech_archaeo_refinery:0 "โรงกลั่นโบราณ"
  tech_archaeo_refinery_desc:0 "This millennia-old processing equipment has an efficiency rate above 100%. Its functioning remains alien, but its production gains are substantial."
- tech_archaeo_pk_devolving_beam:0 "Devolving Beam"
+ tech_archaeo_pk_devolving_beam:0 "คลื่นล้างความทรงจำ"
  tech_archaeo_pk_devolving_beam_desc:0 "A colossal mind-wiping cannon, which unleashes a planet-wide wave of energy returning most sentient life to a pre-sapient state. Engineers estimate that with additional tuning, it might also be used to wipe clean memory banks and disable robotic units."
- tech_archaeo_mass_drivers:0 "Ancient Macro Batteries"
+ tech_archaeo_mass_drivers:0 "ป้อมปืนใหญ่โบราณ"
  tech_archaeo_mass_drivers_desc:0 "These cannons of gargantuan size deliver relatively slow but devastating projectiles, and can fire pretty much anything, from scrap metal, to asteroid chunks."
- tech_archaeo_lasers:0 "Ancient Cavitation Collapser"
+ tech_archaeo_lasers:0 "เลเซอร์กัดกร่อนเนื้อโลหะโบราณ"
  tech_archaeo_lasers_desc:0 "This high energy weapon causes brutal micro collapsing events on impact, generating tremendous heat and force inside its targets armor."
- tech_archaeo_point_defence:0 "Ancient Defensive Web Slinger"
+ tech_archaeo_point_defence:0 "ปืนป้องกันมิสไซล์โบราณ"
  tech_archaeo_point_defence_desc:0 "When it comes to tracking and shooting down missiles, these antique batteries are the best of the best, making use of a predictive algorithm written in long forgotten code to weave a fiery defensive web."
- tech_archaeo_missiles:0 "Ancient Nano-Missile Cloud Launcher"
+ tech_archaeo_missiles:0 "เครื่องยิงมิสไซล์นาโนโบราณ"
  tech_archaeo_missiles_desc:0 "Particle charges, once stabilized thanks to ancient technology, allow us to create swarms of tiny missiles that still carry a respectable payload, and should be able to overwhelm most point-defense systems."
- tech_archaeo_mass_accelerator:0 "Ancient Saturator Artillery"
+ tech_archaeo_mass_accelerator:0 "ปืนใหญ่เจาะโล่พลังงานโบราณ"
  tech_archaeo_mass_accelerator_desc:0 "This cannon fires a barrage of ancient miniscule ionized spheres that charge upon contact with most force fields, giving them high levels of shield penetration. Any theory that these spheres could have been used for jewelry purposes were dismissed when a critical incident melted an entire laboratory."
- tech_archaeo_strike_crafts:0 "Ancient Driller Drones"
+ tech_archaeo_strike_crafts:0 "โดรนขุดเจาะโบราณ"
  tech_archaeo_strike_crafts_desc:0 "These high velocity drones have been equipped with antique mining lasers that virtually ignore any plating protecting their target. A tech too good to be wasted on astro mining."
- building_archaeostudies_faculty_relic_effect:0 "If built on a §YRelic World§!:\n Research Speed (Archaeostudies): §G+50%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.5§!"
- building_archaeostudies_faculty:0 "Faculty of Archaeostudies"
+ building_archaeostudies_faculty_relic_effect:0 "If built on a §YRelic World§!:\n Research Speed (Archaeostudies): §G+50%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.3§!"
+ building_archaeostudies_faculty:0 "คณะโบราณคดี"
  building_archaeostudies_faculty_desc:0 "A series of laboratories dedicated to the studies of technological applications of minor artifacts retrieved from elder empires."
  building_league_offices:0 "$tech_secrets_league$"
  building_league_offices_desc:0 "$tech_secrets_league_desc$"
@@ -844,43 +844,43 @@
  improved_archaeo_overcharger_desc:0 "Starbase Modifier:\nShield Hit Point: §G+50%§!\nShield Hardening: §G+50%§!\nDefense Platform Modifier:\nShield Hit Points: §G+25%§!\nShield Hardening: §G+25%§!"
  building_archaeo_refinery:0 "$tech_archaeo_refinery$"
  building_archaeo_refinery_desc:0 "$tech_archaeo_refinery_desc$"
- job_archaeoengineers:0 "Archaeo-engineer"
- job_archaeoengineers_plural:0 "Archaeo-engineers"
+ job_archaeoengineers:0 "วิศวกรโบราณคดี"
+ job_archaeoengineers_plural:0 "วิศวกรโบราณคดี"
  job_archaeoengineers_desc:0 "Sometimes, it belongs in a warship, not a museum."
  job_archaeoengineers_effect_desc:0 "£job_researcher£ $job_archaeoengineers_plural$ turn $r_consumer_goods$ into £physics£ £society£ £engineering£ §YResearch Points§!"
- job_archaeo_drone:0 "Archaeo-engineering Drone"
- job_archaeo_drone_plural:0 "Archaeo-engineering Drones"
+ job_archaeo_drone:0 "โดรนวิศวกรโบราณคดี"
+ job_archaeo_drone_plural:0 "โดรนวิศวกรโบราณคดี"
  job_archaeo_drone_desc:0 "For a Hive, cultural preservation doesn't hold as much power as an archaeolaser."
  job_archaeo_drone_effect_desc:0 "£job_researcher£ $job_archaeo_drone_plural$ turn $r_minerals$ into £physics£ £society£ £engineering£ §YResearch Points§!"
- job_archaeo_unit:0 "Archaeo-engineering Unit"
- job_archaeo_unit_plural:0 "Archaeo-engineering Units"
+ job_archaeo_unit:0 "ยูนิตวิศวกรโบราณคดี"
+ job_archaeo_unit_plural:0 "ยูนิตวิศวกรโบราณคดี"
  job_archaeo_unit_desc:0 "Specialized drones for the careful manipulation and studyof ancient artifacts."
  job_archaeo_unit_effect_desc:0 "£job_researcher£ $job_archaeo_unit_plural$ turn $r_energy$ into £physics£ £society£ £engineering£ §YResearch Points§!"
  ARCHAEO_SHIELD:0 "$tech_archaeoshield$"
  ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
- SMALL_ARCHAEO_SHIELD:0 "Small $ARCHAEO_SHIELD$"
+ SMALL_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ เล็ก"
  SMALL_ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  tt_SMALL_ARCHAEO_SHIELD_AP:0 "[GetArchaeoengineersEffectSmallShield]"
  tt_SMALL_ARCHAEO_SHIELD:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+75§!"
- MEDIUM_ARCHAEO_SHIELD:0 "Medium $ARCHAEO_SHIELD$"
+ MEDIUM_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ กลาง"
  MEDIUM_ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  tt_MEDIUM_ARCHAEO_SHIELD_AP:0 "[GetArchaeoengineersEffectMediumShield]"
  tt_MEDIUM_ARCHAEO_SHIELD:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+190§!"
- LARGE_ARCHAEO_SHIELD:0 "Large $ARCHAEO_SHIELD$"
+ LARGE_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ ใหญ่"
  LARGE_ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  tt_LARGE_ARCHAEO_SHIELD_AP:0 "[GetArchaeoengineersEffectLargeShield]"
  tt_LARGE_ARCHAEO_SHIELD:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+450§!"
  ARCHAEO_ARMOR:0 "$tech_archaeoarmor$"
  ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
- SMALL_ARCHAEO_ARMOR:0 "Small $ARCHAEO_ARMOR$"
+ SMALL_ARCHAEO_ARMOR:0 "$ARCHAEO_ARMOR$ เล็ก"
  SMALL_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_SMALL_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectSmallArmor]"
  tt_SMALL_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+75§!"
- MEDIUM_ARCHAEO_ARMOR:0 "Medium $ARCHAEO_ARMOR$"
+ MEDIUM_ARCHAEO_ARMOR:0 "$ARCHAEO_ARMOR$ กลาง"
  MEDIUM_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_MEDIUM_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectMediumArmor]"
  tt_MEDIUM_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+190§!"
- LARGE_ARCHAEO_ARMOR:0 "Large $ARCHAEO_ARMOR$"
+ LARGE_ARCHAEO_ARMOR:0 "$ARCHAEO_ARMOR$ ใหญ่"
  LARGE_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_LARGE_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectLargeArmor]"
  tt_LARGE_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+450§!"
@@ -898,14 +898,14 @@
  PLANET_KILLER_DEVOLVER_DESC:0 "$PLANET_KILLER_DEVOLUTION_DESC$"
  ARCHAEO_LASER:0 "$tech_archaeo_lasers$"
  ARCHAEO_LASER_DESC:0 "$tech_archaeo_lasers_desc$"
- SMALL_ARCHAEO_LASER:0 "Small $tech_archaeo_lasers$"
- MEDIUM_ARCHAEO_LASER:0 "Medium $tech_archaeo_lasers$"
- LARGE_ARCHAEO_LASER:0 "Large $tech_archaeo_lasers$"
+ SMALL_ARCHAEO_LASER:0 "$tech_archaeo_lasers$ เล็ก"
+ MEDIUM_ARCHAEO_LASER:0 "$tech_archaeo_lasers$ กลาง"
+ LARGE_ARCHAEO_LASER:0 "$tech_archaeo_lasers$ ใหญ่"
  ARCHAEO_KINETIC:0 "$tech_archaeo_mass_drivers$"
  ARCHAEO_KINETIC_DESC:0 "$tech_archaeo_mass_drivers_desc$"
- SMALL_ARCHAEO_KINETIC:0 "Small $tech_archaeo_mass_drivers$"
- MEDIUM_ARCHAEO_KINETIC:0 "Medium $tech_archaeo_mass_drivers$"
- LARGE_ARCHAEO_KINETIC:0 "Large $tech_archaeo_mass_drivers$"
+ SMALL_ARCHAEO_KINETIC:0 "$tech_archaeo_mass_drivers$ เล็ก"
+ MEDIUM_ARCHAEO_KINETIC:0 "$tech_archaeo_mass_drivers$ กลาง"
+ LARGE_ARCHAEO_KINETIC:0 "$tech_archaeo_mass_drivers$ ใหญ่"
  ARCHAEO_STRIKECRAFT:0 "$tech_archaeo_strike_crafts$"
  ARCHAEO_STRIKECRAFT_DESC:0 "$tech_archaeo_strike_crafts_desc$"
  ARCHAEO_MISSILE:0 "$tech_archaeo_missiles$"
@@ -916,17 +916,17 @@
  ARCHAEO_TITAN_DESC:0 "$tech_archaeo_titan_beam_desc$"
  ARCHAEO_X:0 "$tech_archaeo_mass_accelerator$"
  ARCHAEO_X_DESC:0 "$tech_archaeo_mass_accelerator_desc$"
- ap_archaeoengineers:0 "Archaeo-Engineers"
- ap_archaeoengineers_desc:0 "Combining proven archaic technology with contemporary engineering will give us a timeless advantage."
- requires_technology_tech_archaeostudies:0 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_archaeostudies$§! technology."
- ap_archaeoengineers_tooltip:0 "Unlocks additional effects for §YAncient§! ship components and buildings."
+ ap_archaeoengineers:0 "วิศวกรโบราณคดี"
+ ap_archaeoengineers_desc:0 "การผสมผสานเทคโนโลยีโบราณที่ได้รับการพิสูจน์แล้วเข้ากับวิศวกรรมสมัยใหม่จะทำให้เราได้เปรียบเหนือกาลเวลา"
+ requires_technology_tech_archaeostudies:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £society£ §Y$tech_archaeostudies$§!"
+ ap_archaeoengineers_tooltip:0 "ปลดล็อกเอฟเฟกต์เพิ่มเติมได้แก่ชิ้นส่วนยานและสิ่งปลูกสร้าง §Yโบราณ§!"
  count_archaeological_site_trigger:0 "Number of Dig Sites excavated"
- mod_category_archaeostudies_research_speed_mult:0 "Research Speed (Archaeostudies)"
+ mod_category_archaeostudies_research_speed_mult:0 "ความเร็วในการวิจัย (การศึกษาโบราณคดี)"
  mod_job_archaeoengineers_add:0 "$job_archaeoengineers$ Jobs"
  mod_job_archaeo_drone_add:0 "$job_archaeo_drone$ Jobs"
  mod_job_archaeo_unit_add:0 "$job_archaeo_unit$ Jobs"
  zroni_storm:0 "Artificial Storm"
- leader_trait_expertise_archaeostudies:0 "Expertise: Archaeostudies"
+ leader_trait_expertise_archaeostudies:0 "เชี่ยวชาญ: การศึกษาโบราณคดี"
  leader_trait_expertise_archaeostudies_desc:0 "This leader is, following years of study, considered an expert within the field of Archaeostudies."
  aura_detection_scrambler:0 "Detection Scrambler"
  opinion_devolved_a_world:0 "Devolved a World"
