--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -23,8 +23,8 @@
  origin_tooltip_shattered_ring_effects_lithoid:0 "§R- คำเตือน: จุดกำเนิดท้าทายสำหรับ Lithoids เนื่องจากขาดแคลนแร่§!\n$origin_tooltip_shattered_ring_effects$"
  origin_remnants:0 "เศษเสี้ยวที่ยังเหลืออยู่"
  origin_remnants_desc:1 "This civilization once spanned the void, controlling much of the galaxy. They were eventually defeated and almost destroyed, but after a long period of destitution they are returning to the stars."
- origin_tooltip_remnants_effects:4 "- Start with a §HRelic World§! (Size: £planetsize£ 22) as your homeworld.[GetRemnantAncientRelicEffect]"
- RemnantAncientRelicEffect:0 "\n- Start with the §HArchaeostudies§! technology and the §HFaculty of Archaeostudies§! £building£ building."
+ origin_tooltip_remnants_effects:4 "- เริ่มต้นด้วยการมี §Hดาวโบราณ§! (ขนาด: £planetsize£ 22) เป็นดาวบ้านเกิดของคุณ [GetRemnantAncientRelicEffect]"
+ RemnantAncientRelicEffect:0 "\n- เริ่มต้นเกมด้วยเทคโนโลยี §Hการศึกษาโบราณคดี§! และ £building£ สิ่งปลูกสร้าง §Hคณะโบราณคดี§!"
  origin_tree_of_life:0 "ต้นไม้แห่งชีวิต"
  origin_tree_of_life_desc:0 "This Hive evolved in a symbiotic relationship with a vast Tree. The Tree grants them many benefits, but its loss would cripple them."
  origin_tooltip_tree_effects:3 "- รังของเราได้รับโบนัสมากมายจากอยู่บนดาวดวงนี้ที่มี §Hต้นไม้แห่งชีวิต§! อยู่ด้วยหรือมีโทษหากไม่มีมันอยู่\n- §Hยานอาณานิคม§! จะมีราคาแพงกว่าปกติ แต่สามารถจะจัดหาต้นกล้าไปปลูกที่ดาวเคราะห์ดวงใหม่ได้\n- ให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §H$holding_tree_of_life_sapling$§!"
