--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -3410,24 +3410,24 @@
  FLEETORDER_ASSIST_RESEARCH:1 "Assisting Research on $PLANET|Y$"
  FLEETORDER_ASSIST_RESEARCH_BUTTON:0 "ช่วยวิจัย"
  FLEETORDER_ASSIST_CLOAKING_DETECTION:0 "Assisting Cloaking Detection on $STARBASE|Y$"
- FLEETORDER_ASSIST_CLOAKING_DETECTION_BUTTON:0 "Assist Cloaking Detection"
+ FLEETORDER_ASSIST_CLOAKING_DETECTION_BUTTON:0 "ตรวจจับการพรางตัว"
  FLEETORDER_ASSIST_CLOAKING_DETECTION_DESC:0 "Order the Science Ship to Assist Cloaking Detection on $STARBASE|H$."
  FLEETORDER_ASSIST_CLOAKING_DETECTION_NOT_STARBASE:0 "§RCan only assist Detection from a Starbase.§!"
  FLEETORDER_ASSIST_CLOAKING_DETECTION_NO_STARBASE:0 "§RNo starbase in the system.§!"
  FLEETORDER_ASSIST_CLOAKING_DETECTION_NOT_CONTROLLER:0 "§RStarbase $STARBASE|Y$ is not under our control.§!"
- ACTIVE_RECONNAISSANCE_ORDER:0 "Active Reconnaissance"
+ ACTIVE_RECONNAISSANCE_ORDER:0 "เปิดใช้งานการสอดแนม"
  ACTIVE_RECONNAISSANCE_ORDER_DESC:2 "Order the Science Ship to covertly conduct reconnaissance on a colony, increasing the rate at which we gain Intel on its owner empire.\n\nModifiers per Tier of Planetary Capital:"
  ACTIVE_RECONNAISSANCE_ORDER_TECH_DESC:0 "Order the Science Ship to covertly conduct reconnaissance on a colony, increasing the rate at which we gain Intel on its owner empire."
- ACTIVE_RECONNAISSANCE_ORDER_PLANET_DESC:0 "Order the Science Ship to engage Active Reconnaissance of $PLANET|H$."
+ ACTIVE_RECONNAISSANCE_ORDER_PLANET_DESC:0 "สั่งให้ยานยานวิจัยวิทยาศาสตร์ให้เปิดใช้งานการสอดแนม $PLANET|H$"
  FLEETORDER_ACTIVE_RECONNAISSANCE:0 "Reconnaissance on $PLANET|Y$"
  FLEETORDER_ACTIVE_RECONNAISSANCE_NOT_CLOAKED:0 "§RThe ship needs to be cloaked.§!"
  FLEETORDER_ACTIVE_RECONNAISSANCE_IS_STAR:0 "§RCannot conduct reconnaissance on a star.§!"
  FLEETORDER_ACTIVE_RECONNAISSANCE_NOT_COLONY:0 "§RNot a colony.§!"
  FLEETORDER_ACTIVE_RECONNAISSANCE_SAME_OWNER:0 "§RCannot conduct reconnaissance on own planet.§!"
  FLEETORDER_ACTIVE_RECONNAISSANCE_SAME_CONTROLLER:0 "§RCannot conduct reconnaissance on controlled planet.§!"
- FLEETORDER_ACTIVE_RECONNAISSANCE_PLANET_DESC:0 "Order the Science Ship to engage Active Reconnaissance of $PLANET|H$."
+ FLEETORDER_ACTIVE_RECONNAISSANCE_PLANET_DESC:0 "สั่งให้ยานยานวิจัยวิทยาศาสตร์ให้เปิดใช้งานการสอดแนม $PLANET|H$"
  FLEETORDER_ACTIVE_RECONNAISSANCE_NO_APPROPRIATE_PLANET:0 "Cannot find appropriate planet for Active Reconnaissance."
- FLEETORDER_ACTIVE_RECONNAISSANCE_BUTTON:0 "Active Reconnaissance"
+ FLEETORDER_ACTIVE_RECONNAISSANCE_BUTTON:0 "เปิดใช้งานการสอดแนม"
  FLEETORDER_MOVE_QUEUED:0 "เคลื่อนที่"
  FLEETORDER_MOVE:0 "กำลังเคลื่อนที่"
  FLEETORDER_MOVE_OTHER_SYSTEM:0 "กำลังย้ายไปที่ระบบ $SYSTEM|H$"
@@ -3527,7 +3527,7 @@
  FLEETORDER_PATROL_DESC:0 "Order your ships to patrol between their current location and the target location."
  FLEETORDER_SHOULDNT_BE_CLOAKED:0 "§ROur ship can not perform this operation while cloaked.§!"
  FLEETORDER_NO_CLOAKING_DETECTORS:0 "§RThe target needs to have cloaking detection.§!"
- ASSIST_CLOAKING_DETECTION_ORDER:0 "Assist Cloaking Detection"
+ ASSIST_CLOAKING_DETECTION_ORDER:0 "ตรวจจับการพรางตัว"
  ASSIST_CLOAKING_DETECTION_ORDER_DESC:0 "Order the Science Ship to aid the cloaking detection of a station."
  ASSIST_CLOAKING_DETECTION_ORDER_FLEET_DESC:0 "Order the Science Ship to Assist Cloaking Detection on $STATION|H$."
  trait_rapid_breeders:0 "ขยายพันธุ์อย่างรวดเร็ว"
@@ -5237,7 +5237,7 @@
  ENABLE:0 "เปิดใช้งาน"
  FLEET_VIEW_INVESTIGATE:0 "Investigate"
  FLEET_VIEW_INVESTIGATE_DESC:1 "We need to study these aliens through a §YFirst Contact§! investigation before we can hope to understand their technology or learn how to communicate with them..."
- FLEET_VIEW_INVESTIGATE_DISABLED_BY_CLOAKING: "$FLEET_VIEW_INVESTIGATE$"
+ FLEET_VIEW_INVESTIGATE_DISABLED_BY_CLOAKING:0 "$FLEET_VIEW_INVESTIGATE$"
  FLEET_VIEW_INVESTIGATE_DISABLED_BY_CLOAKING_DESC:1 "§RWe cannot launch a First Contact investigation while Cloaked.§!"
  FLEET_VIEW_REINFORCE_HEADER:0 "เสริมกำลังกองยาน"
  FLEET_VIEW_REINFORCE_CLICK:0 "§Gคลิกเพื่อเสริมกองยานจากอู่ต่อยานที่ใกล้ที่สุด§!"
@@ -5890,10 +5890,10 @@
  TECH_ALWAYS_AVAILABLE:1 "§HThis Technology will remain as a valid option until it is researched.§!"
  TECH_IS_RARE:0 "§Mเทคโนโลยีหายาก§!"
  TECH_IS_DANGEROUS:0 "§Rเทคโนโลยีอันตราย§!"
- TECH_IS_INSIGHT: "$insight_technology$"
- TECH_IS_CUSTOM_TECH_1: "$TECH_IS_RARE$"
- TECH_IS_CUSTOM_TECH_2: "$TECH_IS_INSIGHT$"
- TECH_IS_CUSTOM_TECH_3: "$TECH_IS_DANGEROUS$"
+ TECH_IS_INSIGHT:0 "$insight_technology$"
+ TECH_IS_CUSTOM_TECH_1:0 "$TECH_IS_RARE$"
+ TECH_IS_CUSTOM_TECH_2:0 "$TECH_IS_INSIGHT$"
+ TECH_IS_CUSTOM_TECH_3:0 "$TECH_IS_DANGEROUS$"
  TECH_UNLOCK_IMPROVED_UPLINKS_FORMS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การช่วยวิจัยแบบปรับปรุง"
  TECH_UNLOCK_IMPROVED_UPLINKS_FORMS_DESC:0 "§HImproved Assist Research§!\nAssist Research is now twice as effective."
  TECH_UNLOCK_DIPLOMATIC_ACTION_CREATE_ALLIANCE_TITLE:0 "§Hปลดล็อกการทูต:§! ก่อตั้งพันธมิตร"
@@ -6631,9 +6631,9 @@
  DIPLOMACY_STATUS_INTEGRATING:1 "§Tกำลังรวมเข้ากับ $EMPIRES|H$§!"
  DIPLOMACY_CLOSED_BORDERS:0 "§Tปิดพรมแดนกับ $EMPIRES|H$§!"
  DIPLOMACY_TRUCE:2 "§Tมีการพักรบกับ $EMPIRE|H$ จนถึง $DATE|H$§!"
- DIPLOMACY_UNDER_SOCIETAL_GUIDANCE: "§TUnder societal guidance of $EMPIRES|H$§!."
- DIPLOMACY_PROVIDED_WITH_TECHNOLOGIES: "§TProvided with thechnologies by $EMPIRES|H$§!."
- DIPLOMACY_PRE_FTL_COMMERCIAL_AGREEMENT: "§THas a commercial agreement with $EMPIRES|H$§!."
+ DIPLOMACY_UNDER_SOCIETAL_GUIDANCE:0 "§TUnder societal guidance of $EMPIRES|H$§!."
+ DIPLOMACY_PROVIDED_WITH_TECHNOLOGIES:0 "§TProvided with thechnologies by $EMPIRES|H$§!."
+ DIPLOMACY_PRE_FTL_COMMERCIAL_AGREEMENT:0 "§THas a commercial agreement with $EMPIRES|H$§!."
  DIPLOMACY_ALLIANCE_DESC:0 "§TIn §Hพันธมิตร§!: $NAME|H$§!"
  DIPLOMACY_FEDERATION_DESC:0 "§TIn §Hสหพันธ์§!: $NAME|H$§!"
  DIPLOMACY_OVERLORD_DESC:0 "§Tมีบริวาร§!"
@@ -6663,9 +6663,9 @@
  DIPLOMACY_STATUS_TRUCE:1 "เราพักรบกับพวกเขาจนถึง $DATE|H$"
  DIPLOMACY_STATUS_CASUS_BELLI_HOLDER:0 "พวกเขามีเหตุแห่งสงครามกับเรา"
  DIPLOMACY_STATUS_CASUS_BELLI_TARGET:0 "เรามีเหตุแห่งสงครามกับพวกเขา"
- DIPLOMACY_STATUS_UNDER_SOCIETAL_GUIDANCE: "They are under our societal guidance."
- DIPLOMACY_STATUS_PROVIDED_WITH_TECHNOLOGY: "We share our superior technologies with them."
- DIPLOMACY_STATUS_PRE_FTL_TRADE: "We trade with them."
+ DIPLOMACY_STATUS_UNDER_SOCIETAL_GUIDANCE:0 "They are under our societal guidance."
+ DIPLOMACY_STATUS_PROVIDED_WITH_TECHNOLOGY:0 "We share our superior technologies with them."
+ DIPLOMACY_STATUS_PRE_FTL_TRADE:0 "We trade with them."
  SPECIAL_EVENTOPTION_TRAIT:0 "Option unlocked by the §H$NAME$§! trait"
  SPECIAL_EVENTOPTION_ETHIC:0 "Option unlocked by the §H$NAME$§! ethic"
  EVENT_EXPIRY:0 "The default option will be chosen on $DATE|H$"
@@ -7437,7 +7437,7 @@
  preftl_action_open_tech_pact_desc:0 "Increases technological progress speed."
  preftl_action_trade_pact:0 "Trade Pact"
  preftl_action_trade_pact_desc:0 "Increases the output of our Observation Station."
- opinon_pre_ftl_bombard: "$ORBITAL_BOMBARDMENT$"
+ opinon_pre_ftl_bombard:0 "$ORBITAL_BOMBARDMENT$"
  energy:0 "เครดิตพลังงาน"
  energy_desc:3 "§E§Hเครดิตพลังงาน§! (£energy£) คือพลังงานที่ถูกใช้เป็นสกุลเงินเพื่อแลกเปลี่ยน ที่ได้รับการยอมรับจากทุกเผ่าพันธุ์อื่นๆในอวกาศ คุณสามารถเพิ่มพลังงานได้โดย:\n§Y1.§! ก่อสร้าง §Hเขตกำเนิดไฟฟ้า§! บนพื้นผิวของดาวเคราะห์ที่เป็นอาณานิคม\n§Y2.§! ใช้ §Hยานก่อสร้าง§! สร้าง §Hสถานีขุดแร่§! รอบๆดาวเคราะห์หรือดาวที่อุดมไปด้วยพลังงาน\n§Y3.§! ขายทรัพยากรใน §Hตลาด§!§!"
  influence:0 "อิทธิพล"
@@ -10964,6 +10964,8 @@
  war_goal_wg_hostile_takeover_desc:1 "ทำสงครามเพื่อยึดการควบคุมสำนักงานสาขาของพวกเขา"
  war_goal_wg_humiliation:0 "ทำให้อับอาย"
  war_goal_wg_humiliation_desc:0 "ทำสงครามเพื่อบ่อนทำลายระบอบการปกครองของศัตรูและศรัทธาของประชาชนในสถาบันของพวกเขา"
+ war_goal_wg_payback_msi_humiliation:0 "$war_goal_wg_humiliation$"
+ war_goal_wg_payback_msi_humiliation_desc:0 "$war_goal_wg_humiliation_desc$"
  war_goal_wg_force_ideology:0 "บังคับให้เปลี่ยนอุดมการณ์"
  war_goal_wg_force_ideology_desc:1 "War is waged to force one's ethos and government form on the enemy.\n\nIn the event of a Status Quo peace, systems we occupy will be released as a new ideological ally if they include at least one planet."
  war_goal_wg_fe_humiliation:0 "ทำให้อับอาย"
@@ -11376,7 +11378,7 @@
  sshipyard:0 "อู่ต่อยาน"
  sanchorage:0 "ที่จอดยาน"
  strading_hub:1 "ฮับการค้า"
- sdetection_array:0 "Detection Array"
+ sdetection_array:0 "เซ็นเซอร์ตรวจจับยานพรางตัว"
  MINERAL_STARBASE_MAINTENANCE:0 "ค่าบำรุงรักษาฐานอวกาศ: $GAIN|+=$"
  FLEETORDER_RETURN_TO:0 "กำลังกลับไปที่ §Y$DEST$§!"
  CONSTRUCTION_UNAVAILABLE_UNDER_ATTACK:0 "This planet is under attack, rendering construction impossible."
@@ -11621,7 +11623,7 @@
  numeral_8_icon:0 "£numeral_8£"
  numeral_9_icon:0 "£numeral_9£"
  numeral_10_icon:0 "£numeral_10£"
- MOD_VERSION:0 "Mod v0.68.0, Update 15/03/2023"
+ MOD_VERSION:0 "Mod v0.68.1, Update 30/03/2023"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n n/a§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
