--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1495,7 +1495,7 @@
  mod_unemployment_resources_engineering_research_produces_add:0 "£engineering_research£ $engineering_research$ $UNEMPLOYED_POPS$"
  mod_unemployment_resources_unity_produces_add:0 "£unity£ $unity$ $UNEMPLOYED_POPS$"
  mod_planet_livestock_food_produces_add:0 "£food£ $food$จาก £job_livestock£ §Y$job_livestock_plural$§!"
- mod_planet_livestock_minerals_produces_add:0 "£minerals£ $minerals$ from £job_livestock£ §Y$job_livestock_plural$§!"
+ mod_planet_livestock_minerals_produces_add:0 "£minerals£ $minerals$ จาก £job_livestock£ §Y$job_livestock_plural$§!"
  mod_planet_metallurgists_produces_mult:1 "£job_foundry£ ผลิตผล [GetAlloyProducer]"
  mod_planet_artisans_produces_mult:2 "[GetArtisanIcon] ผลิตผล [GetArtisan]"
  mod_planet_technician_produces_mult:1 "£job_technician£ ผลิตผล [GetTechnician]"
@@ -1556,14 +1556,14 @@
  mod_country_exotic_gases_produces_add:0 "$mod_country_exotic_gases_produces_mult$"
  mod_country_influence_produces_mult:0 "$influence$รายเดือน"
  mod_country_influence_produces_add:0 "$mod_country_influence_produces_mult$"
- mod_country_sr_zro_produces_mult:0 "Monthly $sr_zro$"
+ mod_country_sr_zro_produces_mult:0 "$sr_zro$ รายเดือน"
  mod_country_consumer_goods_produces_mult:0 "$consumer_goods$รายเดือน"
  mod_country_consumer_goods_produces_add:0 "$mod_country_consumer_goods_produces_mult$"
  mod_planet_pops_consumer_goods_upkeep_mult:0 "ค่าบำรุงรักษาประชากรที่เป็น$consumer_goods$"
  mod_planet_branch_office_buildings_produces_mult:0 "ทรัพยากรจาก $BRANCH_OFFICE_BUILDINGS$"
  mod_planet_jobs_produces_mult:0 "ทรัพยากรจากงาน £job£"
  mod_planet_jobs_productive_produces_mult:0 "$mod_planet_jobs_produces_mult$"
- mod_stations_produces_mult:0 "Resources from Orbital Stations"
+ mod_stations_produces_mult:0 "ทรัพยากรจากสถานีวงโคจร"
  mod_planet_jobs_upkeep_mult:0 "ค่าบำรุงรักษาจาก £job£ งาน"
  mod_planet_jobs_productive_upkeep_mult:0 "ค่าบำรุงรักษาจาก £job£ งานผลิตทรัพยากร"
  mod_planet_jobs_food_produces_mult:0 "£food£ $food$จาก £job£ งาน"
@@ -1609,8 +1609,8 @@
  mod_planet_farmers_food_produces_add:0 "$mod_planet_farmers_food_produces_mult$"
  mod_planet_farmers_unity_produces_mult:1 "£unity£ $unity$จาก £job_farmer£ [GetFarmerPlural]"
  mod_planet_farmers_unity_produces_add:0 "$mod_planet_farmers_unity_produces_mult$"
- mod_planet_farmers_consumer_goods_produces_add:0 "£consumer_goods£ $consumer_goods$ from £job_farmer£ [GetFarmerPlural]"
- mod_planet_farmers_energy_produces_add:0 "£energy $energy$ from £job_farmer£ [GetFarmerPlural]"
+ mod_planet_farmers_consumer_goods_produces_add:0 "£consumer_goods£ $consumer_goods$ จาก £job_farmer£ [GetFarmerPlural]"
+ mod_planet_farmers_energy_produces_add:0 "£energy $energy$ จาก £job_farmer£ [GetFarmerPlural]"
  mod_planet_farmers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_farmer£ [GetFarmerPlural]"
  mod_planet_technician_energy_produces_mult:1 "£energy£ $energy$จาก £job_technician£ [GetTechnicianPlural]"
  mod_planet_technician_energy_produces_add:0 "$mod_planet_technician_energy_produces_mult$"
