--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -183,12 +183,12 @@
  MESSAGE_BREAK_SUPPORT_TITLE:0 "Support Revoked"
  MESSAGE_OPEN_BORDERS_TITLE:0 "เปิดพรมแดนแล้ว"
  MESSAGE_CLOSE_BORDERS_TITLE:0 "พรมแดนถูกปิด"
- MESSAGE_FORM_SOCIETAL_ENLIGHTENMENT_PACT_TITLE: "Societal Enlightenment Invitation"
- MESSAGE_BREAK_SOCIETAL_ENLIGHTENMENT_PACT_TITLE: "Societal Enlightenment Ended"
- MESSAGE_FORM_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_PACT_TITLE: "Technological Enlightenment Invitation"
- MESSAGE_BREAK_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_PACT_TITLE: "Technological Enlightenment Ended"
- MESSAGE_FORM_PRE_FTL_TRADE_PACT_TITLE: "Commercial Agreement Invitation"
- MESSAGE_BREAK_PRE_FTL_TRADE_PACT_TITLE: "Commercial Agreement Ended"
+ MESSAGE_FORM_SOCIETAL_ENLIGHTENMENT_PACT_TITLE:0 "Societal Enlightenment Invitation"
+ MESSAGE_BREAK_SOCIETAL_ENLIGHTENMENT_PACT_TITLE:0 "Societal Enlightenment Ended"
+ MESSAGE_FORM_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_PACT_TITLE:0 "Technological Enlightenment Invitation"
+ MESSAGE_BREAK_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_PACT_TITLE:0 "Technological Enlightenment Ended"
+ MESSAGE_FORM_PRE_FTL_TRADE_PACT_TITLE:0 "Commercial Agreement Invitation"
+ MESSAGE_BREAK_PRE_FTL_TRADE_PACT_TITLE:0 "Commercial Agreement Ended"
  ACTION_MAKE_RIVAL_NOTIFICATION:1 "§H[From.GetName]§! ได้ประกาศให้ §H[Root.GetName]§! เป็น §H$RIVAL$§! ของพวกเขา\n\nสิ่งนี้จะทำให้ความสัมพันธ์ทางการทูตของพวกเขาแย่ลงอย่างมาก"
  ACTION_END_RIVALRY_NOTIFICATION:2 "§H[From.GetName]§! ได้ยุติการเป็น $RIVALRY$ กับ §H[Root.GetName]§!\n\nพวกเขาอาจอยู่บนเส้นทางแห่งความสมานฉันท์"
  ACTION_EMBASSY_NOTIFICATION:1 "§H[From.GetName]§! has sent an embassy to §H[Root.GetName]§!.\n\nThis will improve their relations over time."
