--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -117,7 +117,7 @@
  MOD_FIRST_CONTACT_DEFENSE_ADD:0 "ความยากในการติดต่อครั้งแรกของเป้าหมาย"
  MOD_INTEL_GAIN_SPEED:0 "Speed of Intel Gain on Other Empires"
  MOD_COUNTER_INTEL_GAIN_SPEED:1 "Speed of Other Empires' Intel Gain on You"
- MOD_INTEL_RECONNAISSANCE_LEVEL_ADD:0 "Intel level from Active Reconnaissance"
+ MOD_INTEL_RECONNAISSANCE_LEVEL_ADD:0 "เลเวลข่าวกรองจากการเปิดการสอดแนม"
  MOD_COUNTRY_SCAVENGE_DEBRIS_MULT:0 "Resources Gained from Scavenging Debris"
  MOD_ADD_BASE_COUNTRY_INTEL:0 "เลเวลพื้นฐานของข่าวกรอง"
  MOD_POP_FERTILITY:0 "การเจริญพันธุ์"
@@ -593,7 +593,7 @@
  mod_country_dessanu_rare_crystals_produces_add:0 "£rare_crystals£ ผลึกหายาก รายเดือน"
  mod_country_dessanu_sr_living_metal_produces_add:0 "£sr_living_metal£ โลหะมีชีวิต รายเดือน"
  mod_country_extended_payout_energy_produces_add:0 "£energy£ เครดิตพลังงาน รายเดือน"
- mod_country_extended_payout_minerals_produces_add:0 "Monthly £minerals£ แร่"
+ mod_country_extended_payout_minerals_produces_add:0 "£minerals£ แร่ต่อเดือน"
  mod_country_shoulders_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_galactic_standard_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_concessions_energy_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
@@ -803,9 +803,9 @@
  assist_research_desc:1 "Planetside research facilities are assisted by a Science Ship in orbit."
  assist_cloaking_detection:0 "Cloaking Detection Assistance"
  assist_cloaking_detection_desc:0 "Starbase Cloaking Detection arrays are assisted by a Science Ship in orbit."
- active_reconnaissance_speed:0 "Active Reconnaissance"
+ active_reconnaissance_speed:0 "เปิดใช้งานการสอดแนม"
  active_reconnaissance_speed_desc:0 "Gaining intel faster due to having a cloaked Science Ship performing Active Reconnaissance."
- active_reconnaissance_level:0 "Active Reconnaissance"
+ active_reconnaissance_level:0 "เปิดใช้งานการสอดแนม"
  active_reconnaissance_level_desc:0 "Getting intel level due to having a cloaked Science Ship performing Active Reconnaissance."
  previous_deal_broken:0 "ข้อตกลงการค้าที่ถูกทำลาย"
  previous_deal_ended:0 "ข้อตกลงทางการค้าที่บรรลุ(สำเร็จ)"
@@ -1072,7 +1072,7 @@
  opinion_subject_relation:0 "ความสัมพันธ์กับบริวาร"
  opinion_subject:0 "มีจักรวรรดิเจ้าเหนือหัวเดียวกัน"
  opinion_is_subject:0 "บริวาร"
- opinion_subject_protection:0 "Accepted plea for protection"
+ opinion_subject_protection:1 "Accepted Plea for Protection"
  opinion_forced_subjectized:0 "บังคับบริวาร"
  opinion_subject_broke_free:0 "หลุดพ้นจากจักรวรรดิเจ้าเหนือหัว"
  opinion_trade_gift:1 "Favorable Trade Deal"
@@ -1491,5 +1491,5 @@
  mod_quantum_catapult_megastructure_bypass_windup_mult:0 "เครื่องเหวี่ยงกองยานควอนตัม สิ้นสุด"
  mod_country_society_research_cost_mult:0 "Society research Upkeep"
  mod_country_consumer_goods_cost_mult:0 "Consumer goods upkeep"
- contact_with_MSI_01:0 "TODO: add localisation"
- contact_with_MSI_02:0 "TODO: add localisation"
+ contact_with_MSI_01:1 "Troubled Past"
+ contact_with_MSI_02:1 "$contact_with_MSI_01$"
