--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -39,7 +39,7 @@
  TRIGGER_INTEL_STALE_NOT:0 "$INTEL|Y$ is not stale for $COUNTRY$"
  INTEL_DETAILS:1 "ข้อมูลข่าวกรองปัจจุบัน: $CURRENT_INTEL|Y$ / $TARGET_INTEL|Y$"
  INTEL_TARGET_BREAKDOWN:1 "ข้อมูลข่าวกรองของคุณต่อจักรวรรดิ $TARGET_EMPIRE|Y$ จะมีแนวโน้มไปสู่จุดสูงสุด:"
- INTEL_TARGET_BREAKDOWN_CONTENT:3 "Base Intel: $FROM_MODIFIER|Y$\nDiplomatic Pacts: $FROM_DIPLO_PACTS|Y$\nFrom Trust: $FROM_TRUST|Y$\nFrom Infiltration: $FROM_SPY_NETWORK|Y$\nFrom Active Reconnaissance: $FROM_ACTIVE_RECONNAISSANCE|Y$"
+ INTEL_TARGET_BREAKDOWN_CONTENT:3 "พื้นฐานของข่าวกรอง: $FROM_MODIFIER|Y$\nสนธิสัญญาทางการทูต: $FROM_DIPLO_PACTS|Y$\nจากความเชื่อใจ: $FROM_TRUST|Y$\nจากการแทรกซึม: $FROM_SPY_NETWORK|Y$\nจากการเปิดการสอดแนม: $FROM_ACTIVE_RECONNAISSANCE|Y$"
  INTEL_CATEGORY_LEVEL:0 "$CATEGORY$: $LEVEL$"
  INTEL_LEVEL_0:0 "§Rไม่มี§!"
  INTEL_LEVEL_1:0 "§Rต่ำ§!"
@@ -276,7 +276,7 @@
  first_contact.50.B.machine:0 "Evaluation protocols evaluate intolerable risk."
  first_contact.50.C:0 "The dangers of ignorance are greater."
  first_contact.50.C1:0 "We must find out their secrets."
- first_contact.50.C.machine:0 "Initiating Subversion Protocols."
+ first_contact.50.C.machine:1 "Initiating Subversion Protocols."
  first_contact.50.C.tooltip:0 "§RWe will attempt to hack into their databanks to find out more about them. If they detect our attempts, they will likely be angered by this course of action.§!"
  first_contact.60.name:0 "การสื่อสารที่ได้รับ"
  first_contact.60.desc.default:1 "The §H[This.ContactCountry.GetName]§! appear eager to establish communications with us, having sent a large audio and visual §Htransmission§! that appears to offer the key to translating their language."
