--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -117,7 +117,7 @@
  FLEETORDER_ENTERING_BYPASS_EXT:1 "Transiting via $BYPASS_TYPE|H$ to $SYSTEM|H$\nProgress: $CUR|Y0$/$COST|Y0$ ( $DAYS|Y$ Days )"
  mod_relay_bypass_windup_empire_mult:1 "Reduced delays to transit speed through $hyper_relay_plural$"
  mod_relay_bypass_windup_ship_mult:1 "$mod_relay_bypass_windup_empire_mult$"
- MOD_COUNTRY_MIA_TIME_MULT:2 "Reduced time spent Missing In Action"
+ MOD_COUNTRY_MIA_TIME_MULT:2 "เวลาที่ใช้เมื่อสูญหายในระหว่างปฏิบัติภาระกิจลดลง"
  OPEN_ORBITAL_RING:0 "เปิดสถานีอวกาศวงแหวนโคจร"
  OPEN_PLANET_VIEW:0 "Open Planet View"
  sm_ring_energy_hub:0 "เครื่องสตราโตสเฟียร์ไอออไนเซชัน"
@@ -208,4 +208,4 @@
  mod_megastructures_hyper_relay_volatile_motes_upkeep_add:1 "£volatile_motes£ $volatile_motes$ Upkeep of $hyper_relay_plural$"
  mod_megastructures_hyper_relay_exotic_gases_upkeep_add:0 "£exotic_gases£ $exotic_gases$ Upkeep of $hyper_relay_plural$"
  mod_megastructures_hyper_relay_rare_crystals_upkeep_add:0 "£rare_crystals£ $rare_crystals$ Upkeep of $hyper_relay_plural$"
- mod_megastructures_hyper_relay_unity_produces_add:0 "Monthly £unity£ Unity from §Y$hyper_relay_plural$§!"
+ mod_megastructures_hyper_relay_unity_produces_add:0 "£unity£ เอกภาพจาก §Y$hyper_relay_plural$§! ต่อเดือน"
