--- a/mod/thmod/localisation/english/first_contact_dlc_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_dlc_espionage_l_english.yml
@@ -119,22 +119,22 @@
  preftl_operation.1021.spiri.desc:0 "$preftl_operation.1018.spiri.desc$"
  espionage_pre_ftl_indoctrination:0 "Societal Shift"
  espionage_pre_ftl_indoctrination_desc:0 "Parts of this society have recently changed their political outlook, embracing a significant new ethos."
- espionage_pre_ftl_indoctrination_authoritarian: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_authoritarian_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_egalitarian: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_egalitarian_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_materialist: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_materialist_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_militarist: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_militarist_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_pacifist: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_pacifist_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_spiritualist: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_spiritualist_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_xenophile: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_xenophile_desc: "$espionage_pre_ftl_indoctrination_desc$"
- espionage_pre_ftl_indoctrination_xenophobe: "$espionage_pre_ftl_indoctrination$"
- espionage_pre_ftl_indoctrination_xenophobe_desc: "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_authoritarian:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_authoritarian_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_egalitarian:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_egalitarian_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_materialist:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_materialist_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_militarist:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_militarist_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_pacifist:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_pacifist_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_spiritualist:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_spiritualist_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_xenophile:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_xenophile_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
+ espionage_pre_ftl_indoctrination_xenophobe:0 "$espionage_pre_ftl_indoctrination$"
+ espionage_pre_ftl_indoctrination_xenophobe_desc:0 "$espionage_pre_ftl_indoctrination_desc$"
  preftl_operation.1025.name:1 "[this.GetName]: Ready to Reveal"
  preftl_operation.1025.desc:1 "Our preparations on [target.capital_scope.GetName] are now concluded; our operatives are poised to bring the [target.GetName] one step further onto the galactic stage."
  preftl_operation.1026.name:0 "Is There Life Out There?"
