--- a/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
- tech_cloaking_1:0 "Basic Cloaking Fields"
+ tech_cloaking_1:0 "สนามพลัง B.C. Field (พรางตัว)"
  tech_cloaking_1_desc:0 "A modified particle field allows our vessels to effectively 'hide' in open space. However, this comes at the cost of destabilizing other forms of energy shielding which would otherwise protect the ship."
- tech_cloaking_2:0 "Advanced Cloaking Fields"
+ tech_cloaking_2:0 "สนามพลัง A.C. Field (พรางตัว)"
  tech_cloaking_2_desc:0 "Advancements in rare crystal lensing technology have greatly improved cloaking efficiency."
- tech_cloaking_3:0 "Elite Cloaking Fields"
+ tech_cloaking_3:0 "สนามพลัง E.C. Field (พรางตัว)"
  tech_cloaking_3_desc:0 "Typical cloaking technology can play havoc with a ship's more delicate instruments. However, these elite fields render such concerns obsolete."
- tech_cloaking_dark_matter:0 "Dark Matter Cloaking Fields"
+ tech_cloaking_dark_matter:0 "สนามพลัง D.M.C. Field (พรางตัว)"
  tech_cloaking_dark_matter_desc:0 "This device uses dark matter to warp space-time around the vessel, making it incredibly difficult to detect."
- tech_cloaking_psi:0 "Psi-Phase Field Generator"
+ tech_cloaking_psi:0 " เครื่องกำเนิดสนามพลังพรางตัว (พลังจิต)"
  tech_cloaking_psi_desc:0 "Psi-Phase Field Generators focus the psionic potential of the ship's crew to partially phase the vessel into the Shroud. This allows the ship to remain undetected by all but the best sensor arrays, though what the crew may be forced to witness is better left unsaid."
- tech_detection_array:0 "Detection Array"
+ tech_detection_array:0 "เซ็นเซอร์ตรวจจับยานพรางตัว"
  tech_detection_array_desc:0 "$sm_detection_array_desc$"
- tech_dark_matter_detection:0 "Dark Matter Detection"
+ tech_dark_matter_detection:0 "เซ็นเซอร์ตรวจจับสสารมืด"
  tech_dark_matter_detection_desc:0 "Dark matter resonance chambers will significantly improve the performance of our detection arrays."
- tech_assisted_detection:0 "Advanced Detection Algorithms"
+ tech_assisted_detection:0 "อัลกอริทึมตรวจจับขั้นสูง"
  tech_assisted_detection_desc:0 "Coupling detection arrays with the computers onboard our science vessels can vastly increase their scanning resolution."
  feature_assist_cloaking_detection_unlocked:0 "$ASSIST_CLOAKING_DETECTION_ORDER$"
  feature_assist_cloaking_detection_unlocked_desc:0 "$ASSIST_CLOAKING_DETECTION_ORDER_DESC$"
@@ -30,18 +30,18 @@
  TECH_UNLOCK_CLOAKING_PSI_TITLE:0 "§HUnlocks Component:§! $CLOAKING_PSI$"
  TECH_UNLOCK_CLOAKING_PSI_DESC:0 "§H$CLOAKING_PSI$§!\n$tech_cloaking_psi_desc$"
  SCIENCE_CLOAKING_EMPTY:0 "Empty Slot"
- science_cloaking_components:0 "Cloaking Field Generators"
+ science_cloaking_components:0 " เครื่องกำเนิดสนามพลังพรางตัว"
  science_cloaking_components_desc:0 "Cloaking field generators allow our vessels to hide from conventional sensors."
- SHIP_SHIELD_REDUCTION_CLOAKING: "$MOD_SHIP_SHIELD_REDUCTION$ from cloaking"
+ SHIP_SHIELD_REDUCTION_CLOAKING:0 "$MOD_SHIP_SHIELD_REDUCTION$ from cloaking"
  CLOAKING_SHIELD_REDUCTION_HEADER:1 "\n$SHIP_SHIELD_REDUCTION_CLOAKING$:"
- CLOAKING_1:0 "Basic Cloaking Field Generator"
+ CLOAKING_1:0 "เครื่องกำเนิดสนามพลัง B.C. Field"
  CLOAKING_1_DESC:0 "$tech_cloaking_1_desc$"
  CORVETTE_CLOAKING_1:0 "$CLOAKING_1$"
  CORVETTE_CLOAKING_1_DESC:0 "$CLOAKING_1_DESC$"
  SCIENCE_CLOAKING_1:0 "$CLOAKING_1$"
  SCIENCE_CLOAKING_1_DESC:0 "$CLOAKING_1_DESC$"
  CLOAKING_1_TOOLTIP:1 "$CLOAKING_SHIELD_REDUCTION_HEADER$ §R100%§!"
- CLOAKING_2:0 "Advanced Cloaking Field Generator"
+ CLOAKING_2:0 "เครื่องกำเนิดสนามพลัง A.C. Field"
  CLOAKING_2_DESC:0 "$tech_cloaking_2_desc$"
  CORVETTE_CLOAKING_2:0 "$CLOAKING_2$"
  CORVETTE_CLOAKING_2_DESC:0 "$CLOAKING_2_DESC$"
@@ -50,7 +50,7 @@
  SCIENCE_CLOAKING_2:0 "$CLOAKING_2$"
  SCIENCE_CLOAKING_2_DESC:0 "$CLOAKING_2_DESC$"
  CLOAKING_2_TOOLTIP:0 "$CLOAKING_1_TOOLTIP$"
- CLOAKING_3:0 "Elite Cloaking Field Generator"
+ CLOAKING_3:0 "เครื่องกำเนิดสนามพลัง E.C. Field"
  CLOAKING_3_DESC:0 "$tech_cloaking_3_desc$"
  CORVETTE_CLOAKING_3:0 "$CLOAKING_3$"
  CORVETTE_CLOAKING_3_DESC:0 "$CLOAKING_3_DESC$"
@@ -61,7 +61,7 @@
  SCIENCE_CLOAKING_3:0 "$CLOAKING_3$"
  SCIENCE_CLOAKING_3_DESC:0 "$CLOAKING_3_DESC$"
  CLOAKING_3_TOOLTIP:0 "$CLOAKING_1_TOOLTIP$"
- CLOAKING_DARK_MATTER:0 "Dark Matter Cloaking Field Generator"
+ CLOAKING_DARK_MATTER:0 "เครื่องกำเนิดสนามพลัง D.M.C. Field"
  CLOAKING_DARK_MATTER_DESC:0 "$tech_cloaking_dark_matter_desc$"
  CORVETTE_CLOAKING_DARK_MATTER:0 "$CLOAKING_DARK_MATTER$"
  CORVETTE_CLOAKING_DARK_MATTER_DESC:0 "$CLOAKING_DARK_MATTER_DESC$"
@@ -87,10 +87,10 @@
  SCIENCE_CLOAKING_PSI:0 "$CLOAKING_PSI$"
  SCIENCE_CLOAKING_PSI_DESC:0 "$CLOAKING_PSI_DESC$"
  CLOAKING_PSI_TOOLTIP:1 "$CLOAKING_SHIELD_REDUCTION_HEADER$ §R100%§!\n\n§E$SHIP_SHIELD_REDUCTION_CLOAKING$ can be prevented if Psionic Barriers or Psionic Shields are equipped on their own. The use of any other shield type will negate this effect.§!\n\n"
- sm_detection_array:0 "Detection Array"
- sm_detection_array_plural:0 "Detection Arrays"
+ sm_detection_array:0 "เซ็นเซอร์ตรวจจับยานพรางตัว"
+ sm_detection_array_plural:0 "เซ็นเซอร์ตรวจจับยานพรางตัว"
  sm_detection_array_desc:0 "A high-powered suite of external sensors, capable of detecting cloaked fleets.\n"
- sm_dark_matter_detector:0 "Dark Matter Resonance Chamber"
+ sm_dark_matter_detector:0 "ห้องเรโซแนนซ์สสารมืด"
  sm_dark_matter_detector_desc:0 "By exciting dark matter into a resonant state, this chamber will greatly improve our Detection Arrays.\n"
  sm_dark_matter_detector_desc_modifier:1 "Every §Y3§! §H$sm_detection_array_plural$§! provide:\n$t$Detection Strength: §G+1§!"
  sm_dark_matter_listening_post:0 "Dark Matter Listening Post"
@@ -102,7 +102,7 @@
  CLOAKING_DETECTION:0 "Detection Strength"
  CLOAKING_DETECTION_VALUE:0 "$CLOAKING_DETECTION$: $VALUE|0$"
  CLOAKING_DETECTION_DESC:0 "§E§HDetection Strength§! is a measure of the sensitivity of the Detection Arrays equipped on the Starbase. The higher the sensitivity of the Detection Arrays, the more powerful a Cloaking Field the arrays can penetrate.§!"
- CLOAKING_DEVICE_VALUE:0 "Cloaking Field Generator: §G+$VALUE|0$§!"
+ CLOAKING_DEVICE_VALUE:0 "เครื่องกำเนิดสนามพลังพรางตัว: §G+$VALUE|0$§!"
  FLEET_CLOAKING_ACTIVE_EFFECTS:0 "While cloaked, this fleet suffers the following penalties:"
  FLEET_CLOAKING_LEVEL_THRESHOLDS:1 "Increasing Cloaking Strength will reduce any penalties.\nDecreasing Cloaking Strength will increase any penalties.\n\n$SHIP_SHIELD_REDUCTION_CLOAKING$ applies on a per ship basis and depends on the equipped Cloaking Field Generator component."
  FLEET_VIEW_ACTIVATE_CLOAK:0 "Activate Cloaking"
@@ -177,18 +177,18 @@
  SHIP_CLOAKING_NO:0 "Cloaking Capability: §RNo§!"
  SYSTEM_DECLOAK_WARNING:0 "This system has a $VALUE$ £ship_stats_cloaking_detection£ Detection Strength, which will reveal our Cloaked fleet."
  SYSTEM_DECLOAK_WARNING_UNKNOWN:0 "This system has an $CLOAKING_DETECTION_UNKNOWN$ £ship_stats_cloaking_detection£ Detection Strength, improving our Intel may change this."
- tech_unusual_senses:0 "Unusual Senses"
+ tech_unusual_senses:0 "ความรู้สึกที่ผิดปกติ"
  tech_unusual_senses_desc:0 "Nothing is more innovative than natural evolution. By studying how pre-FTL societies view their world, we have devised new methods of detecting uninvited ships."
  tech_unusual_senses_effect:1 "§HListening Posts§! provide §G+1§! Detection Strength and Sensor Range for every §Y3§! §H$sm_detection_array_plural$§!"
  sm_listening_post_unusual_senses_desc:0 "Every §Y3§! §H$sm_detection_array_plural$§! provide:\n$t$Detection Strength: §G+1§!\n$t$Sensor Range: §G+1§!"
- tech_new_numbers:0 "New Numbers"
+ tech_new_numbers:0 "ตัวเลขแบบใหม่"
  tech_new_numbers_desc:0 "After studying multiple pre-FTL civilizations, we have realized that there are many alternative ways to calculate the universe. It has even introduced new numbers into our mathematics."
- tech_trinary_computing:0 "Trinary Computing"
+ tech_trinary_computing:0 "การคำนวณแบบไตรนารี"
  tech_trinary_computing_desc:0 "Different societies have developed alternative solutions for their logistics and computing. These alien ways of thinking have made it easier for us to adapt to foreign empires' structures."
- tech_atmospheric_orbital_mechanics:0 "Atmospheric Orbital Mechanics"
+ tech_atmospheric_orbital_mechanics:0 "กลศาสตร์การโคจรบนชั้นบรรยากาศ"
  tech_atmospheric_orbital_mechanics_desc:0 "Due to our vast experience operating observation stations in orbit of pre-FTL worlds, we have discovered slight optimizations. By implementing them empire-wide, we can drastically reduce the maintenance our stations require."
- mod_stations_upkeep_mult:0 "Station Upkeep"
- tech_predatory_tactics:0 "Predatory Tactics"
+ mod_stations_upkeep_mult:0 "การบำรุงรักษาสถานี"
+ tech_predatory_tactics:0 "กลยุทธ์นักล่า"
  tech_predatory_tactics_desc:0 "Just like how clever pre-FTLs move to conceal each other as they approach an enemy, so too can our pilots move faster without disrupting their cloaking field."
  tech_predatory_tactics_effect:0 "Sublight Speed Loss from Cloaking: §G-50%§!"
  very_low_cloaking_predator:0 "$tech_predatory_tactics$"
@@ -197,7 +197,7 @@
  high_cloaking_predator:0 "$tech_predatory_tactics$"
  very_high_cloaking_predator:0 "$tech_predatory_tactics$"
  exceptional_cloaking_predator:0 "$tech_predatory_tactics$"
- tech_satisfying_insults:0 "Satisfying Insults"
+ tech_satisfying_insults:0 "เรียนรู้วิธีดูถูกในหลายภาษา"
  tech_satisfying_insults_desc:0 "Nothing is quite as powerful as a well-placed insult, and we now know how to insult a species's progenitor in many languages."
  tech_satisfying_insults_effect:0 "Gain a benefit for insulting another empire every §Y5 years§!."
  satisfying_insult_cooldown:1 "\n\nWe can not gain the benefit of §HSatisfying Insults§! until the current modifier expires."
@@ -206,19 +206,19 @@
  MESSAGE_SATISFYING_INSULTS:0 "Our [Root.GetLinguists] have finished developing a new satisfying insult. We just need to find a target for it."
  satisfying_insult_recently:0 "Satisfying Insult"
  satisfying_insult_recently_desc:0 "That was a zinger!"
- tech_compact_living:0 "Compact Living"
+ tech_compact_living:0 "การดำรงชีวิตแบบกะทัดรัด"
  tech_compact_living_desc:0 "While no one civilization has the perfect solution to the ever-expanding challenge of governing a growing nation, we have found a partial solution. After studying a multitude of species and governments, we have discovered an outstanding balance of flexibility and function."
- tech_alien_topography:0 "Alien Topography"
+ tech_alien_topography:0 "ภูมิประเทศที่เหมาะสำหรับมนุษย์ต่างดาว"
  tech_alien_topography_desc:0 "Civilizations flourish in locations that promotes growth, and by analyzing where the majority of pre-FTL settlements thrive we can gain more out of our colonies."
- tech_xeno_aesthetics:0 "Xeno-Aesthetics"
+ tech_xeno_aesthetics:0 "การศึกษาสุนทรียศาสตร์ของชาวต่างดาว"
  tech_xeno_aesthetics_desc:0 "After analyzing a multitude of artists from drastically different cultures, we have come up with a general theorem. By studying a civilization's art and culture, we can gain an advantage against them in combat."
- tech_lost_building_methods:0 "Lost Building Methods"
+ tech_lost_building_methods:0 "วิธีการสร้างของคนยุคโบราณ"
  tech_lost_building_methods_desc:0 "Any civilization with a long enough history has examples of great wonders built by forgotten ancients which can no longer be replicated. Luckily for us we have documented these great ancients when they appeared on pre-FTL worlds."
- tech_supreme_alloy:0 "Supreme Alloy"
+ tech_supreme_alloy:0 "โลหะผสมขั้นสูงสุด"
  tech_supreme_alloy_desc:0 "What we thought was the greatest alloy turned out to be far from the truth. Countless pre-FTL refining processes have been cataloged, and we have now synthesized an unbeatable metal."
- tech_ordered_retreat:0 "Ordered Retreat"
+ tech_ordered_retreat:0 "การออกคำสั่งถอย"
  tech_ordered_retreat_desc:0 "While studying the victors of battles might be the most obvious way to gain insight from combat, observing the loser on pre-FTL worlds has taught us how to organize our withdraws more effectively."
- tech_temple_of_transportation:0 "Temple of Transportation"
+ tech_temple_of_transportation:0 "วิหารแห่งการขนส่ง"
  tech_temple_of_transportation_desc:0 "Transportation networks bring people together: a sentiment shared by many civilization we observed. While we do not have steam engines, our hyper relay networks could serve a similar purpose."
  SENSOR_DEVICE_VALUE:0 "Starbase Sensor: §G+$VALUE|0$§!"
  HYPERLANE_DETECTION_RANGE_DESC:0 "§E§H$HYPERLANE_RANGE$§! is the maximum range at which hyperlanes can be detected from this Starbase.§!"
