--- a/mod/thmod/localisation/english/modifiers_2_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_2_l_english.yml
@@ -172,8 +172,8 @@
  mod_damage_vs_country_type_gate_builders_mult:0 "ทำความเสียหายกับ Gate-builders"
  mod_damage_vs_country_type_gray_mult:0 "Damage to the Gray Tempest"
  MOD_DAMAGE_VS_PLAYER_CRISIS_MULT:0 "Damage to Crisis-Seeking Civilizations"
- MOD_DAMAGE_VS_RIVAL_MULT:0 "Damage to Rivals"
- MOD_DAMAGE_VS_SUPERIOR_EMPIRES_MULT: "Damage to Militarily Superior Empires"
+ MOD_DAMAGE_VS_RIVAL_MULT:0 "ทำความเสียหายกับคู่แข่ง"
+ MOD_DAMAGE_VS_SUPERIOR_EMPIRES_MULT:0 "Damage to Militarily Superior Empires"
  opinion_literary_savior:0 "Literary Savior"
  opinion_book_burner:0 "ประกาศความเหนือกว่า"
  opinion_faction_insult:0 "Faction Insult"
